mobile horizontal scroll fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+  overflow-x: hidden;
 }
+
+html {overflow-x: hidden;}
 
 .App {
   background-color: rgba(0,0,0,0);
@@ -15,6 +18,9 @@ body {
 
 /*NAVBAR SECTION*/
 
+.bobo {
+  
+}
 
 .nav-list {
   
@@ -28,11 +34,13 @@ body {
   color: black;
 }
 
+
 /*mobile nav*/
 
 
 .toggle-button {
   position: absolute;
+  position: fixed;
   top: .75rem;
   right: 1rem;
   width: 30px;
@@ -139,6 +147,12 @@ body {
   opacity: 0;
   font-size: 100px;
   transition: 4s;
+}
+
+@media (max-width: 650px){
+  .bigname{
+    font-size: 75px;
+  }
 }
 
 
